--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:textSize="25sp" />
 
     <EditText
+        android:autofillHints="name"
         android:id="@+id/userLogin"
         android:layout_width="220dp"
         android:layout_height="50dp"
@@ -28,23 +29,25 @@
         android:layout_gravity="center"/>
 
     <EditText
+        android:autofillHints="emailAddress"
         android:id="@+id/userEmail"
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:hint="@string/loginEnter"
+        android:hint="@string/emailEnter"
         android:layout_gravity="center"/>
 
     <EditText
+        android:autofillHints="password"
         android:id="@+id/userPassword"
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:hint="@string/loginEnter"
+        android:hint="@string/passwordEnter"
         android:layout_gravity="center"/>
 
     <Button
@@ -56,5 +59,10 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:text="@string/registration" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerMovieList"
+        android:layout_width="0dp"
+        android:layout_height="0dp" />
 
 </LinearLayout>
