Catalogue page done

--- a/app/src/main/res/layout/fragment_catalogue.xml
+++ b/app/src/main/res/layout/fragment_catalogue.xml
@@ -7,14 +7,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_margin="16dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/itemsList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:paddingBottom="70dp" />
     </LinearLayout>
 
 </FrameLayout>
