--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -49,6 +49,18 @@
                 android:ellipsize="end"
                 android:lineSpacingExtra="4sp" />
 
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@tools:sample/full_names"
+                android:textColor="@color/on_surface"
+                android:textSize="12sp"
+                android:textStyle="normal"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:lineSpacingExtra="4sp" />
+
             <!-- Цена -->
             <LinearLayout
                 android:layout_width="match_parent"
