--- a/app/src/main/res/menu/nav_bar.xml
+++ b/app/src/main/res/menu/nav_bar.xml
@@ -11,7 +11,7 @@
     <item android:title="@string/cart"
         android:icon="@drawable/cart"
         android:id="@+id/cart" />
-    <item android:title="@string/account"
+    <item android:title="@string/profile"
         android:icon="@drawable/account"
         android:id="@+id/account" />
 </menu>
