Amount in cart added

--- a/app/src/main/res/menu/nav_bar.xml
+++ b/app/src/main/res/menu/nav_bar.xml
@@ -13,5 +13,5 @@
         android:id="@+id/cart" />
     <item android:title="@string/profile"
         android:icon="@drawable/account"
-        android:id="@+id/account" />
+        android:id="@+id/profile" />
 </menu>
