--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -100,7 +100,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:text="@string/add_to_cart"
+                    android:text="@string/addToCart"
                     android:textSize="14sp"
                     app:icon="@drawable/cart"
                     app:iconGravity="textStart"
