--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -81,13 +81,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="@string/add_to_cart"
+                android:text="@string/addToCart"
                 android:textSize="14sp"
                 style="@style/Widget.Material3.Button.OutlinedButton"
                 app:icon="@drawable/cart"
                 app:iconGravity="textStart"
                 app:iconPadding="8dp"
                 android:id="@+id/addToCartButton" />
+
+            <!-- Кнопка удаления из корзины -->
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="@string/removeFromCart"
+                android:textSize="14sp"
+                style="@style/Widget.Material3.Button.OutlinedButton"
+                app:icon="@drawable/cart"
+                app:iconGravity="textStart"
+                app:iconPadding="8dp"
+                android:id="@+id/removeFromCartButton" />
 
         </LinearLayout>
 
